# loam-corpus

./: .dockerignore  .gitignore  Dockerfile  Taskfile.yml  load.py  paths.py  pyproject.toml
deploy/: .gitignore  cloud-config.yaml  cloud-config.yaml.tftpl  main.tf  terraform.tfvars  variables.tf
loam_corpus/: laion.py  load.py  load_en_chunks.py  paths.py  sample_en_chunks.py  settings.py  utils.py
