[tool.poetry]
name = "loam-corpus"
version = "0.1.0"
description = ""
authors = ["David McClure"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"
datasets = { git = "https://github.com/huggingface/datasets.git", branch = "fix-xisfile" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
