[tool.poetry]
name = "loam-corpus"
version = "0.1.0"
description = ""
authors = ["David McClure"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"
pandas = "^1.4.3"
boltons = "^21.0.0"
typer = "^0.4.1"
nltk = "^3.7"
datasets = "^2.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
